fix: increase z-index for message display in FormAddProductToCart component

--- a/src/components/FormAddProductToCart/FormAddProductToCart.css
+++ b/src/components/FormAddProductToCart/FormAddProductToCart.css
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: center;
     animation: fade-message 5s 1 forwards;
+    z-index: 1000;
 }
 
 .message-not-auth p {
